<resources>
    <string name="locale_title">Select Language</string>
    <string name="generic_notification_more">More(%s)</string>
    <string name="notification_unread_num">Unread %s</string>
    <string name="notification_click_upgrade">Update</string>
    <string name="notification_click_download">Download</string>
    <string name="notification_click_open">More</string>
    <string name="notification_wechat_red_envelop_title">微信红包提醒</string>
    <string name="notification_alipay_red_envelop_title">支付宝红包提醒</string>
    <string name="notification_qq_red_envelop_title">QQ红包提醒</string>
    <string name="notification_red_envelop_content">%s的红包，快打开手机领取吧!</string>
    <string name="notification_red_envelop_default_content">快打开手机领取吧!</string>
    <string name="notification_alipay_default_group">群聊</string>
    <string name="notification_red_bracket">[%s]</string>
    <string name="notitification_wechat_red_content_pattern_one">^\\[\\d{1,3}.*?条\\]</string>
    <string name="notification_qq_red_title_pattern">\\(\\d{1,3}.*新消息\\)</string>
    <string name="notification_qq_red_content_pattern">^\\[QQ红包\\]</string>
    <string name="notification_qq_group_content_red_pattern">: \\[QQ红包\\]</string>
    <string name="notification_alipay_default_title">Alipay</string>
    <string name="notification_alipay_default_pattern">支付宝</string>
    <string name="notification_alipay_group_red_pattern">在群聊中发了一个红包$</string>
    <string name="notification_alipay_red_pattern">发来一个红包$</string>
    <string name="delete_all_notifications">Delete all notifications</string>
    <string name="delete_all_notifications_confrim_content">Deleted notifications can’t be retrieved later on the watch, continue?</string>
    <string name="quick_settings_airplane_mode">Airplane: %1$s</string>
    <string name="quick_settings_no_disturb_mode">Silent: %1$s</string>
    <string name="quick_settings_auto_light_mode">Backlight: %1$s</string>
    <string name="quick_settings_more_settings">More Settings</string>
    <string name="quick_settings_switch_auto">Auto</string>
    <string name="quick_settings_switch_awake">Awake</string>
    <string name="quick_settings_switch_always">Always On</string>
    <string name="quick_settings_switch_on">ON</string>
    <string name="quick_settings_switch_off">OFF</string>
    <string name="quick_settings_toast_on">Enabled</string>
    <string name="quick_settings_toast_off">Disabled</string>
    <string name="quick_settings_status">Disconnected</string>
    <string name="quick_settings_no_disturb_toast">Notification will not be shown</string>
    <string name="quick_settings_auto_light_toast">Screen highlighting, will increase the power consumption</string>
    <string name="quick_settings_status_month">-</string>
    <string name="quick_settings_status_day">  </string>
    <string name="quick_settings_connected">Connected</string>
    <string name="quick_settings_disconnect">Disconnected</string>
    <string name="quick_settings_date_chinese">yyyy-MM-dd</string>
    <string name="quick_settings_date_format">1900-1-31</string>
    <string name="quick_settings_date_yeareve">New Year Eve</string>
    <string name="seconed_confirm_nodisturb">"Silent Mode On
New notification will not show any more."</string>
    <string name="quick_settings_battery_charging_full">Fully charged</string>
    <string name="quick_settings_battery_is_charging">Charging...</string>
    <string name="quick_settings_battery_hasnot_charged">Not been charged</string>
    <string name="quick_settings_battery_charging_intervalDay">%1$d days %2$d hours since charge</string>
    <string name="quick_settings_battery_charging_intervalDay_lessHour">%d days since charge</string>
    <string name="quick_settings_battery_charging_intervalDayLess">%d hours since charge</string>
    <string name="quick_settings_battery_charging_intervalLessHour">"Less than 1 hour 
since charge"</string>
    <string name="quick_settings_battery_sportString">Battery life in Sports mode</string>
    <string name="quick_settings_battery_sporttime_hour_unit">hour</string>
    <string name="quick_settings_battery_sporttime_KM_unit">km</string>
    <string name="quick_settings_battery_level_unit">%</string>
    <string name="quick_settings_battery_sporttime_MI_unit">mi</string>
    <string name="health_def_value" />
    <string name="health_def_hint" />
    <string name="health_title_def_value">Today you have walked</string>
    <string name="splash_hint">Initializing ...</string>
    <string name="header_incomming_call_name" />
    <string name="header_incomming_call_hint">Incoming call</string>
    <string name="header_incomming_call_mobilephone">Phone</string>
    <string name="header_incomming_call_landlinephone">Landline</string>
    <string name="header_incomming_call_searchinglocation">Attribution querying...</string>
    <string name="header_incomming_call_mobile_virtual">Mobile Virtual Carriers</string>
    <string name="header_incomming_call_unicom_virtual">Unicom Virtual Carriers</string>
    <string name="header_incomming_call_telecom_virtual">Telecom Virtual Carriers</string>
    <string name="header_incomming_call_other_virtual">Other Mobile Virtual Carriers</string>
    <string name="header_incomming_call_service_hotline">Service hotline</string>
    <string name="header_incomming_call_localcall">Local call</string>
    <string name="header_incomming_call_unknowncall">Unknown call</string>
    <string name="wathc_disconnection_title">Disconnected</string>
    <string name="wathc_disconnection_content">Disconnected from phone</string>
    <string name="notification_block">Block</string>
    <string name="notification_block_cancel">Cancel</string>
    <string name="notification_block_ok">Confirm</string>
    <string name="notification_more_settings">More settings</string>
    <string name="notification_time_just">Just now</string>
    <string name="notification_time_yesterday">Yesterday</string>
    <string name="notificaton_empty_message">No item</string>
    <string name="music">Music</string>
    <string name="music_title">Unknown Title</string>
    <string name="music_author">Unknown Artist</string>
    <string name="music_stop_status">Paused</string>
    <string name="music_play_status">Playing</string>
    <string name="music_bulethooth_disconnect">Connecting to Bluetooth…</string>
    <string name="music_peek_content">Your phone is using the %s app to play music. You can control music playback through the notification on the watch.</string>
    <string name="amazing_dialog_btn_confirm_text">Confirm</string>
    <string name="amazing_dialog_btn_cancel_text">Cancel</string>
    <string name="accept">Accept</string>
    <string name="action_failure">"Sorry, that didn't work"</string>
    <string name="action_success">Success!</string>
    <string name="action_working">On the way...</string>
    <string name="action_delete">Delete</string>
    <string name="action_shield">不再通知</string>
    <string name="activity_not_found">There was a problem completing the requested action.</string>
    <string name="data_checkfail_match">Weather type fields do not match</string>
    <string name="data_checkfail_temp">Weather temperature out of range</string>
    <string name="data_checkfail_type">Unable to recognize weather type</string>
    <string name="notification_block_message">No longer receive app notifications</string>
    <string name="launcher_app_name">Launcher</string>
    <string name="hm_watch_sports_notification_km">Kilometers</string>
    <string name="hm_watch_sports_notification_sports">Sports</string>
    <string name="hm_generic_notification_iconified_content_line">Hello, I am a fan of Huami</string>
    <string name="notification_action_more">More</string>
    <string name="notitification_wechat_red_content_pattern_two">: \\[微信红包\\]</string>
    <string name="notification_time_day">HH:mm</string>
    <string name="notification_time_month">MM/dd HH:mm</string>
    <string name="notification_time_year">yyyy/MM/dd HH:mm</string>
    <string name="notification_none">No notifications</string>
    <string name="notification_allclear">Clear the notifications list</string>
    <string name="notification_allclear_confirm">Clear notifications can’t be retrieved later on the watch, continue?</string>
    <string name="notification_checking_bluetooth">Checking Bluetooth connection...</string>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="air_lightly_polluted">Mild pollution</string>
    <string name="fetch_failed_msg">Please make sure the watch is connected to the Amazfit Watch App and a valid location is selected in the app.</string>
</resources>